website/versioned_docs/version-0.9.1/0_03_CHANGELOG.md
---
id: changelog
title: Changelog
sidebar_label: Changelog
---

### OST KIT⍺ - 17 May 2018

One of our overall goals is to make blockchain technology and access simpler for everyone. As we took a look at our current API code base as well as feedback from our community, we decided that in order to grow while keeping the platform accessible, we needed to make the code structure simpler and easier to use. As such, we revised most of our structure to be more intuitive and will hopefully be easier to add to as we scale. The following enhancements are introduced based on the feedback from the community, broadly: 

 * Allow users to execute transactions with arbitrary value
 * Allow arbitrary transfers of OSTa on the utility chain in order to deploy and interact with other contracts on the utility chain
 * Improve existing APIs logic based on feedback

Specifically:

- Revised API code
	- Improved existing API logic and structure across all APIs
	- Documents standardized error responses

- Javascript SDK documentation
	- Release of official OST javascript SDK
	- Modules for `user` and `transaction-types` APIs v0.9.2

- Updated user API
	- POST to `/users/create` updated to `/users` creates a user
	- POST to `/users/edit` updated to `/users/{id}` updates a user with `{id}`
	- GET to `/users/list` updated to, 
		a. `/users/{id}` gets a user with `{id}`
		b. `/users` gets users with enhanced filtering features that makes sorting easier

- New action API 
	- POST to `transaction-types/create` updated to `/actions` creates an action
	- POST to `transaction-types/edit` updated to `/actions/{id}` updates an action with `{id}`
	- GET to `/transaction-types/list` updated to,
		a. `/actions/{id}` gets the action with `{id}`
		b. `/actions` gets actions

- Updated transaction-types API
	- POST to `/transaction-types/execute` updated to `/transactions` creates new transaction
	- GET to `/transaction-types/status` updated to, 
		a. `/transactions/{id}` retrieves the transaction with `{id}`
		b. `/transactions` retrieves all transactions
	- Allows users to execute transactions with arbitrary value
	- Allows arbitrary transfers of OST⍺ on the utility chain in order to deploy and interact with other contracts on the utility chain			

- Updated airdrops API
	- POST to `/users/airdrop/drop` updated to `/airdrops` initiates an airdrop
	- GET to `/users/airdrop/status` updated to, 
		a. `/airdrops/{id}` gets an airdrop with `{id}`
		b. `/airdrops` get airdrops

- New transfers API
	- POST to `/transfers` executes an OST⍺' fund
	- GET to `/transfers/{id}` gets OST⍺' fund with `{id}`
	- GET to `/transfers` gets OST⍺' funds

- New Token API
	- GET to `token` gets the branded token economy information


### OST KIT⍺ - 30 April 2018
- Revised authentication documentation 
	- Clearer authentication signature generation steps. 
	- Node.js authentication code snippets for POST and GET requests.


### OST KIT⍺ - 19 March 2018

After reviewing the usage data from the initial public release of OST KIT⍺, we have implemented the following performance improvements:

- increased the number of database servers, augmenting IOPS;
- refactored certain database actions and optimized certain database queries;
- added additional application servers;
- enabled rate-limiting by public IP address to 100 transactions per second; and
- established a two-track system for API calls by API Key:
  	- a fast queue for rates at up to 2,000 transactions per two minutes; and
	- a slower queue to process transactions at higher rates, subject to the overall rate-limit of 100 transactions per second.

Additionally, [<u>OST VIEW</u>](https://view.ost.com/) was enhanced to reduce latency. OST VIEW, our custom-built block explorer for analyzing transactions on the OpenST network of side blockchains, is not a part of OST KIT⍺. However, OST VIEW is a powerful tool that will help you to leverage the strength of OST KIT⍺; even more so thanks to its recent user experience improvements.

**Thank you!**

Thanks to the OST community, the initial public release of OST KIT⍺ was super successful, with over 1,000 Branded Tokens deployed and over 2,000,000 token transfers executed. We learned a great deal in the initial public release, including from direct feedback. We hope these improvements underscore our commitment to enabling mainstream adoption of blockchain technology and to earning your confidence as the blockchain platform of choice for forward-thinking businesses.

We would love to know how these improvements impact your experience of OST KIT⍺, [<u>so be in touch</u>](https://help.ost.com/support/discussions)!

### OST KIT⍺ - 15 March 2018

Our initial public release of OST KIT⍺.
